--- a/client/src/components/signup/signup.module.css
+++ b/client/src/components/signup/signup.module.css
@@ -41,7 +41,8 @@
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    margin-bottom: 56px;
+    margin-bottom: 55px;
+    margin-right: 3%;
 }
 
 .bttn{
