--- a/client/src/components/signup/userSignup/userSignup.module.css
+++ b/client/src/components/signup/userSignup/userSignup.module.css
@@ -22,7 +22,7 @@
     justify-content: center;
 }
 
-.driverLoginLeft{
+.userLoginLeft{
     text-align: left;
     margin-right: 75px;
     width: 45%;
@@ -36,6 +36,7 @@
 
 .profilePictureComponentLeft{
     margin-right: 300px;
+    margin-bottom: -30px;
 }
 
 .profilePictureComponentRight{
@@ -43,18 +44,19 @@
     margin-bottom: -30px;
 }
 
- .driverLoginRight{
+ .userLoginRight{
     text-align: left;
     margin-left: 75px;
     width: 45%;
  }
 
 .submitContainer{
-    margin-top: 50px;
+    margin-top: 80px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-self: center;
+    margin-bottom: -4%;
 }
 
 .signUpLink{
