--- a/client/src/components/signup/driverSignup/driverSignup.module.css
+++ b/client/src/components/signup/driverSignup/driverSignup.module.css
@@ -50,6 +50,14 @@
     width: 45%;
  }
 
+ .textAreaAutoSize{
+    font-size: 20px;
+    border: 5px solid rgb(71, 97, 231);
+    border-radius: 10px;
+    margin-bottom: -4%;
+ }
+
+
 .submitContainer{
     margin-top: 50px;
     display: flex;
