--- a/client/src/components/home/userHome/sidebar/userSidebar.module.css
+++ b/client/src/components/home/userHome/sidebar/userSidebar.module.css
@@ -11,6 +11,7 @@
     height: 95%;
     width: 100%;
     border: 2px solid rgb(89, 115, 240);
+    overflow: hidden;
 }
 
 .usernameContainer{
@@ -46,6 +47,7 @@
     height: 27%;
     background-color: rgba(17, 179, 87, 1);
     margin-top: 5%;
+    margin-bottom: -10%;
     margin-right: 5%;
     margin-left: 5%;
     border-radius: 10px;
