--- a/client/src/components/home/userHome/body/requestDriver/requestDriver.module.css
+++ b/client/src/components/home/userHome/body/requestDriver/requestDriver.module.css
@@ -1,23 +1,19 @@
-.userRequest{
+.requestDriver{
     display: flex;
     flex-direction: column;
     justify-content: top;
     background-color: rgba(225,225,225,0.5);
     width: 100%;
     margin: 20px;
-    padding: 20px;
+    padding: 50px;
     border-radius: 20px;
 }
 
-.header{
-    background-color: white;
-    width: 100%;
-    height: 15%;
-    text-align: center;
+.prefferedDriverContainer{
     display: flex;
-    flex-direction: column;
     justify-content: center;
-    border-radius: 20px;
+    flex-direction: row;
+    width: 100%;
 }
 
 .inputFields{
@@ -32,3 +28,4 @@
     background-color: rgba(255,255,255,1);
     height: 51px;
 }
+
