--- a/client/src/components/home/driverHome/header/driverHeader.module.css
+++ b/client/src/components/home/driverHome/header/driverHeader.module.css
@@ -23,6 +23,19 @@
     font-size: large;
 }
 
+.buttonsActive{
+    color: black;
+    margin-top: -20px;
+    margin-bottom: 5px;
+    margin-right: 3px;
+    margin-left: 3px;
+    border: 3px solid rgb(44, 44, 44);
+    border-radius: 10px;
+    width: 175px;
+    font-size: larger;
+    background-color: white;
+}
+
 .buttons:hover{
     background-color: white;
 }
