--- a/client/src/components/home/userHome/header/userHeader.module.css
+++ b/client/src/components/home/userHome/header/userHeader.module.css
@@ -8,7 +8,7 @@
 .navbar{
     display: flex;
     justify-content: center;
-    margin-right:-30px;
+    margin-right:- 30px;
 }
 
 .buttons{
@@ -21,6 +21,19 @@
     border-radius: 10px;
     width: 150px;
     font-size: large;
+}
+
+.buttonsActive{
+    color: black;
+    margin-top: -20px;
+    margin-bottom: 5px;
+    margin-right: 3px;
+    margin-left: 3px;
+    border: 3px solid rgb(44, 44, 44);
+    border-radius: 10px;
+    width: 175px;
+    font-size: larger;
+    background-color: white;
 }
 
 .buttons:hover{
