--- a/client/src/components/home/driverHome/body/requests/requests.module.css
+++ b/client/src/components/home/driverHome/body/requests/requests.module.css
@@ -8,7 +8,7 @@
     padding: 20px;
     border-radius: 20px;
     overflow-y: scroll;
-    scrollbar-color:  #2c84d1 transparent;
+    scrollbar-color:  #2C84D1 transparent;
     scroll-behavior: smooth;
 }
 
@@ -16,7 +16,6 @@
     width: 80%;
     height: 30%;
     list-style-type: none;
-   
 }
 
 .customerRequests li{
