--- a/client/src/components/home/userHome/body/yourRequests/yourRequests.module.css
+++ b/client/src/components/home/userHome/body/yourRequests/yourRequests.module.css
@@ -35,6 +35,7 @@
     padding: 20px;
     margin-bottom: -20%;
     height: 65%;
+    border-radius: 20px;
 }
 
 .row1{
@@ -49,6 +50,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    margin-left: 150px;
 }
 
 .star{
@@ -59,5 +61,5 @@
 }
 
 .star:hover{
-    color: yellow;
+    color: gold;
 }
