--- a/client/src/components/home/driverHome/body/yourProfile/driverProfile.module.css
+++ b/client/src/components/home/driverHome/body/yourProfile/driverProfile.module.css
@@ -1,41 +1,196 @@
 .driverProfile{
     display: flex;
     flex-direction: column;
-    justify-content: top;
+    justify-content: center;
+
     background-color: rgba(225,225,225,0.5);
+
+    height: 80%;
     width: 100%;
-    margin: 20px;
-    padding: 20px;
+
+    padding: 50px;
+    margin: 18px;
+
     border-radius: 20px;
-    overflow-y: scroll;
-    scrollbar-color:  #2C84D1 transparent;
-    scroll-behavior: smooth;
+
+    overflow-x: scroll;
+    overflow-y: hidden;
     scroll-snap-type: x mandatory;
+    scrollbar-color: #2C84D1 transparent;
+    scroll-behavior: smooth;
 }
 
 .rowContainer{
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: center;
+
+    width: 212%;
     height: 100%;
-    width: 200%;
-    align-items: center;
+}
+
+.snapStart{
+    scroll-snap-align: start;
+    color: rgba(225,225,225,0.5);
+
+    margin-left: -3%;
 }
 
 .overview{
-    scroll-snap-align: start;
-    height: 95%;
-    width: 50%;
+    background-color: rgb(255,255,255);
+    font-size: 40px;
+
+    width: 100%;
+
+    padding: 20px;
+
     border-radius: 20px;
-    margin-right: -2%;
-    margin-left: 0%;
+    box-shadow: 2px 2px 5px black;
+}
+
+.divider{
+    color: rgba(225,225,225,0.5);
 }
 
 .editables{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+
+    background-color: rgba(255,255,255,0);
+    font-size: 30px;
+
+    width: 100%;
+
+    border-radius: 20px;
+    box-shadow: 0 0 0;
+
+    overflow-x: hidden;
+    overflow-y: scroll;
+    scroll-snap-type: y mandatory;
+    scrollbar-color: #2C84D1 transparent;
+    scroll-behavior: smooth;
+}
+
+.columnContainer{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    width: 100%;
+    height: 250%;
+
+    padding: 20px;
+}
+
+.paper1{
+    display: flex;
+    flex-direction: column;
+    justify-content: top;    
+
+    width: 100%;
+    height: 100%;
+
+    padding: 2% 0;
+
+    margin-top: 5%;
+    margin-bottom: 1%;
+
+    border-radius: 20px;
+    box-shadow: 2px 2px 10px black;
+    border-radius: 10px;
+    
+    background-color: white;
+}
+
+.password{
+    width: 100%;
+    height: 100%;
+    background-color: white;
+}
+
+.paper2{
+    display: flex;
+    flex-direction: column;
+    justify-content: top;
+    align-items: center;
+    
+    width: 100%;
+    height: 100%;
+
+    padding: 2% 0;
+    margin-top: 10px;
+    padding-top: 2%;
+    padding-bottom: 8%;
+
+    border-radius: 20px;
+    box-shadow: 2px 2px 10px black;
+    border-radius: 10px;
+    
+    background-color: rgb(255, 255, 255);
+
+    height: 80%;
+}
+
+.address{
+    width: 100%;
+    background-color: white;
+}
+
+.paper3{
+    display: flex;
+    flex-direction: column;
+    justify-content: top;
+    align-items: center;
+    
+    width: 96%;
+    height: 100%;
+
+    padding: 0 2%;
+
+    border-radius: 20px;
+    box-shadow: 2px 2px 10px black;
+    border-radius: 10px;
+    
+    background-color: rgb(255, 255, 255);
+}
+
+.vehicleList{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    margin: -3% 0;
+
+    height: 98%;
+    width: 98%;
+}
+
+.itemsContainer{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.list{
+    width: 75%;
+
+    margin: 1% 0.5%;
+}
+
+.interface{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    width: 25%;
+
+    margin: 1% 0.5%;
+}
+
+.snapEnd{
     scroll-snap-align: end;
-    height: 95%;
-    width: 50%;
-    border-radius: 20px;    
-    margin-right: -10%;
-    margin-left: 6%;
+    color: rgba(225,225,225,0.5);
+
+    margin-right: -3%;
 }
