--- a/client/src/components/home/userHome/body/userProfile/userProfile.module.css
+++ b/client/src/components/home/userHome/body/userProfile/userProfile.module.css
@@ -95,39 +95,14 @@
 }
 
 .region{
-    border: 2px solid rgb(195, 195, 195);
-    background-color: rgb(234, 233, 233);
     width: 50%;
-    height: 20%;
-}
+    margin-right: 7%;
+    background-color: rgb(234, 233, 233);
+} 
 
 .address{
-    width: 49%;
+    width: 50%;
+    margin-right: 7%;
     border: 2px solid rgb(195, 195, 195);
     background-color: rgb(234, 233, 233);
-}
-
-/* .parent {
-    display: flex;
-    flex-direction: row;
-    overflow-x: auto;
-    overflow-y: hidden;
-
-    font-size: 50px;
-    width: 100%;
-    background-color: white;
-    border: 2px solid black;    
-  }
-  
-  .child {
-    display: flex;
-    flex-direction: column;
-    overflow-x: hidden;
-    overflow-y: auto; 
-
-    margin: 10px 5px;
-    padding: 10px 100%;
-    background-color: white;
-    border: 2px solid black;
-  } */
-  
+} 
