--- a/client/src/components/home/userHome/body/requestDriver/requestDriver.module.css
+++ b/client/src/components/home/userHome/body/requestDriver/requestDriver.module.css
@@ -9,7 +9,7 @@
     border-radius: 20px;
 }
 
-.prefferedDriverContainer{
+.preferedDriverContainer{
     display: flex;
     justify-content: center;
     flex-direction: row;
@@ -21,6 +21,7 @@
     border-radius: 20px;
     height: 50px;
     background-color: rgba(255,255,255,0.7);
+    font-size: x-large;
 }
 
 .inputFields:focus{
