--- a/client/src/components/home/driverHome/body/requests/requests.module.css
+++ b/client/src/components/home/driverHome/body/requests/requests.module.css
@@ -20,7 +20,7 @@
 
 .customerRequests li{
     background-color: white;
-    height: 30%;
+    height: 60px;
     width: 100%;
     margin: 10px;
     font-size: 25px;
