--- a/client/src/components/home/driverHome/body/driverJourney/driverJourney.module.css
+++ b/client/src/components/home/driverHome/body/driverJourney/driverJourney.module.css
@@ -5,25 +5,55 @@
     background-repeat: no-repeat;
 }
 
+.header{
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    height: 20vh;
+    width: 100%;
+}
+
 .main{
     display: flex;
     justify-content: center;
     flex-direction: row;
-    height: 80vh;
+    height: 60vh;
     width: 100%;
+    font-size: 50px;
 }
 
-.main>.buttonGroup{
+table{
+    background-color: rgba(255, 255, 255, 0.7);
+    border: 2px solid black;
+    border-radius: 10px;
+}
+
+table>tr,th,td{
+    padding: 10px 100px;
+    border: none;
+}
+
+table>tr{
+    text-align: left;
+}
+
+.buttonGroup{
     display: flex;
-    justify-content: space-evenly;
-    flex-direction: column;
+    justify-content: center;
+    flex-direction: row;
 }
 
-.main>.buttonGroup>button{
+.buttonGroup>button{
     width: 500px;
     height: 80px;
-    font-size: xx-large;
-    border-radius: 15px;
+    color: black;
+    margin-top: -20px;
+    margin-bottom: 20px;
+    margin-right: 3px;
+    margin-left: 3px;
+    border: 2px solid rgb(44, 44, 44);
+    border-radius: 10px;
+    font-size: large;
 }
 
 .footer{
